packages/typ/tests/fixtures/diagnostics/0299_fun_locally_abstract_mismatch_06.ml.infer.expected
File "0299_fun_locally_abstract_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0299_fun_locally_abstract_mismatch_06 is not a valid module name.

File "0299_fun_locally_abstract_mismatch_06.ml", line 1, characters 38-39:
1 | let bad_zeta (type a) (x : a) : int = x
                                          ^
Error: The value x has type a but an expression was expected of type int
