packages/typ/tests/fixtures/diagnostics/0299_fun_locally_abstract_mismatch_06.ml
let bad_zeta (type a) (x : a) : int = x
